# rofehcloud

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  Makefile  README.md  main.py  pyproject.toml  requirements.txt  rofehcloud.py  ruff.toml  setup.py
common/: agent.py  chat.py  config.py  constants.py  llm.py  logger.py  profile.py  utils.py
src/rofehcloud/: __init__.py  __main__.py  agent.py  aws.py  chat.py  config.py  constants.py  llm.py  logger.py  profile.py  utils.py
tests/: package.sh
